change response type